Framework: Fixes clipping of focus styles on section header buttons

--- a/client/components/section-header/style.scss
+++ b/client/components/section-header/style.scss
@@ -30,6 +30,8 @@
 
 .section-header__actions {
 	flex-grow: 0;
+	position: relative;
+
 	@include clear-fix;
 }
 
